<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
>
	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_marginBottom="5dp"
		android:layout_weight="1"
		android:background="@color/player_form_background_color"
	>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="top"
		android:orientation="vertical"
		android:padding="5dp" >

		<include layout="@layout/element_player_field"/>

	</LinearLayout>
	</ScrollView>
	<LinearLayout
		android:id="@+id/ll_create"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:visibility="gone"
		android:gravity="bottom"
	>
		<Button
			android:id="@+id/btn_create"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight=".5"
			android:layout_marginRight="5dp"
			android:text="@string/button_text_ok"
			android:visibility="gone"
		/>
		<Button
			android:id="@+id/btn_import"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight=".5"
			android:text="@string/button_text_import"
		/>
	</LinearLayout>

	<LinearLayout
		android:id="@+id/ll_modify"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:visibility="gone"
		android:gravity="bottom"
	>
		<Button
			android:id="@+id/btn_modify"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight=".5"
			android:layout_marginRight="5dp"
			android:text="@string/button_text_ok"
			android:visibility="gone"
		/>
		<Button
			android:id="@+id/btn_qrcode"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight=".5"
			android:text="@string/button_text_qrcode"
		/>
	</LinearLayout>

	<LinearLayout
		android:id="@+id/ll_add_demande"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:visibility="gone"
		android:gravity="bottom"
	>
		<Button
			android:id="@+id/btn_add_demande_yes"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight=".5"
			android:layout_marginRight="5dp"
			android:text="@string/button_text_yes"
			android:visibility="gone"
		/>
		<Button
			android:id="@+id/btn_add_demande_no"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight=".5"
			android:text="@string/button_text_no"
		/>
	</LinearLayout>
</LinearLayout>